--- a/customwebportal/webapp/view/FAQ.view.xml
+++ b/customwebportal/webapp/view/FAQ.view.xml
@@ -4,7 +4,7 @@
     xmlns="sap.m"
     xmlns:core="sap.ui.core"
 >
-    <!-- Floating FAQ Button with Text -->
+    <!-- Floating FAQ Button -->
     <Button
         id="faqBtnUI5"
         text="FAQ"
@@ -14,51 +14,33 @@
         class="faqFloatingBtnCss"
     />
 
-    <!-- FAQ Dialog -->
-    <Dialog
-        id="faqDialog"
+    <!-- FAQ Responsive Popover -->
+    <ResponsivePopover
+        id="faqPopover"
         title="Top FAQs"
+        placement="Top"
+        showHeader="true"
         class="sapUiContentPadding"
-        contentWidth="350px"
-        contentHeight="auto"
-        draggable="true"
-        resizable="true"
     >
-        <List items="{faqModel>/faqs}">
-            <CustomListItem>
-                <HBox
-                    alignItems="Center"
-                    justifyContent="SpaceBetween"
-                    width="100%"
-                >
-                    <Text
-                        text="{faqModel>question}"
-                        wrapping="true"
-                    />
-                    <Button
-                        icon="sap-icon://navigation-right-arrow"
-                        type="Transparent"
-                    />
-                </HBox>
-            </CustomListItem>
-        </List>
-
-        <endButton>
-            <Button
-                text="Close"
-                press=".onCloseDialog"
-            />
-        </endButton>
-        <customHeader>
-            <Toolbar>
-                <Title text="Top FAQs" />
-                <!-- <ToolbarSpacer />
-                <Button
-                    icon="sap-icon://decline"
-                    type="Transparent"
-                    press=".onCloseDialog"
-                /> -->
-            </Toolbar>
-        </customHeader>
-    </Dialog>
+        <content>
+            <List items="{faqModel>/faqs}">
+                <CustomListItem>
+                    <HBox
+                        alignItems="Center"
+                        justifyContent="SpaceBetween"
+                        width="100%"
+                    >
+                        <Text
+                            text="{faqModel>question}"
+                            wrapping="true"
+                        />
+                        <Button
+                            icon="sap-icon://navigation-right-arrow"
+                            type="Transparent"
+                        />
+                    </HBox>
+                </CustomListItem>
+            </List>
+        </content>
+    </ResponsivePopover>
 </mvc:View>
