--- a/customwebportal/webapp/css/style.css
+++ b/customwebportal/webapp/css/style.css
@@ -13,12 +13,12 @@
 }
 
 .userNameText {
-    font-size: 1.2rem;  /* biggest */
+    font-size: 1.02rem;  /* biggest */
     font-weight: bold;
 }
 
 .userEmailText {
-    font-size: 1rem;    /* smaller than name */
+    font-size: 0.92rem;    /* smaller than name */
     color: #555;        /* optional for better contrast */
 }
 
@@ -123,7 +123,7 @@
 }
 
 body > #faqBtnUI5 {
-    position: fixed !important;
+    position: absolute !important;
     bottom: 20px !important;
     right: 20px !important;
     z-index: 999999 !important;
@@ -143,7 +143,6 @@ body > #faqBtnUI5 {
     align-items: center !important;
     justify-content: center !important;
 }
-
 /* FAQ text styling */
 .faqFloatingBtnCss .sapMBtnText {
     color: #ffffff !important;
@@ -154,12 +153,11 @@ body > #faqBtnUI5 {
     line-height: 1 !important;
 }
 
+
 /* Hover effect */
 .faqFloatingBtnCss:hover {
     background-color: #cc0000 !important;
     transform: scale(1.05) !important;
     transition: all 0.2s ease !important;
 }
-
-
 
